2009-08-28  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/NameConfig.cpp: tweaked setNameServerName
	to remove another source of cached namespaces

	* src/CMakeLists.txt: add option to compile new yarp server
	version to the global build.  To use the new yarp server,
	turn on the "CREATE_YARPSERVER3" flag during configuration,
	and run it as "yarpserver3".  The current yarp server is 
	still compiled and is still available as "yarp server" or
	"yarpserver"

	* src/libYARP_OS/include/yarp/os/impl/StringOutputStream.h: fix
	inefficient append operation.

	* src/libYARP_OS/include/yarp/os/impl/BufferedConnectionWriter.h: 
	add an optimization for messages with lots of small parts.

	* example/swig/CMakeLists.txt: fix directory creation for Java
	wrappers (thanks to Jonas Ruesch)

	* src/libYARP_OS/src/Bottle.cpp: make Bottle copies much, much
	faster.

	* example/profiling/bottle_test.cpp: do some profiling on 
	Bottles.

2009-08-26  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/include/yarp/os/Network.h: add setNameServerName
	method for changing namespaces within a program (note: be very
	careful if you do this!)  Thanks Kyron Du Casse for prompting
	this.

2009-08-17  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* example/swig/CMakeLists.txt: add patch from Dimitri Ognibene,
	java libraries need to have suffix .jnilib on OSX

	* example/swig/README: add doc patch from Dimitri Ognibene for 
	Java+Matlab

	* README: add doc patch from Dimitri Ognibene for OSX

2009-08-13  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/NameConfig.cpp: check for HOMEPATH before
	HOME when looking for config files, in order to give consistent
	behavior on windows.

2009-08-12  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/yarpserver/: initial checkin of new yarp server version,
	"yarpserver3".  This is not yet the default server, and won't be
	for a while.

	* src/libYARP_OS/src/ResourceFinder.cpp: allow for multiple