@@ -1,3 +1,13 @@
+2009-09-02  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
+
+	* src/libYARP_OS/src/Module.cpp: change getName() to avoid an
+	extra "/" character being inserted if new ROBOTCUB naming
+	guidelines are followed.
+
+	* src/libYARP_OS/src/RFModule.cpp: change getName() to avoid an
+	extra "/" character being inserted if new ROBOTCUB naming
+	guidelines are followed (thanks David Vernon).
+
 2009-08-28  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
 
 	* src/libYARP_OS/src/NameConfig.cpp: tweaked setNameServerName
